[package]
name = "task-compat"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Utility crate to compat futures 0.1 and futures 0.3 tasks."
category = ["asynchronous"]
keywords = ["task", "futures", "compat"]


[dependencies]
futures01 = { version = "0.1", package = "futures"}
futures03 = { version = "0.3", package = "futures", default-features = false }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-core", "macros", "sync"] }
futures03 = { version = "0.3", package = "futures", features = ["compat"] }